--- a/pag_sobreMim/bio.html
+++ b/pag_sobreMim/bio.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Joao da Silva - Sobre</title>
 		<meta charset="utf-8">
+		<link rek="stylesheet" href="reset.css">
 		<link rel="icon" href="favicon.png">
 		<link rel="stylesheet" href="site.css">
 		
@@ -49,7 +50,7 @@
 			</div>
 		</main>
 		<img src="eu.jpg" alt="Foto de João da Silva">
-		<aside>
+		<aside> <!-- conteúdo auxiliar, complementa conteúdo principal-->
 			<nav> <!-- nav = TAG semântica --> 
 				<h1>João da Silva</h1>
 				<ul>
@@ -60,6 +61,11 @@
 					<li><a href="#">contato</a></li>
 				</ul>
 			</nav>
+			<ul id="icones-sociais">
+				<li><a href="http://github.com/gabrielnp"><img src="github.png" alt="Github"></a></li>
+				<li><a href="http://twitter.com"><img src="twitter.png" alt="Twitter"></a></li>
+				<li><a href="http://linkedin.com"><img src="linkedin.png" alt="LinkedIn"></a></li>
+			</ul>
 		</aside>
 		<footer>
 			&copy; João da Silva 2018
