--- a/pag_sobreMim/bio.html
+++ b/pag_sobreMim/bio.html
@@ -49,8 +49,8 @@
 							<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 					</div>
 			</main>
-			<img src="eu.jpg" alt="Foto de João da Silva">
-			<aside> <!-- conteúdo auxiliar, complementa conteúdo principal-->
+			<img class="minha-foto" src="eu.jpg" alt="Foto de João da Silva">
+			<aside class="navegacao-site"> <!-- conteúdo auxiliar, complementa conteúdo principal-->
 				<nav> <!-- nav = TAG semântica --> 
 					<h1>João da Silva</h1>
 					<ul>
