--- a/pag_sobreMim/bio.html
+++ b/pag_sobreMim/bio.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Joao da Silva - Sobre</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="icon" href="favicon.png">
-		<link rel="stylesheet" href="site.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="icon" href="img/favicon.png">
+		<link rel="stylesheet" href="css/site.css">
 		
 		<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
@@ -49,7 +49,7 @@
 							<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um <a href="blog.html">blog</a>.</p>
 					</div>
 			</main>
-			<img class="minha-foto" src="eu.jpg" alt="Foto de João da Silva">
+			<img class="minha-foto" src="img/eu.jpg" alt="Foto de João da Silva">
 			<aside class="navegacao-site"> <!-- conteúdo auxiliar, complementa conteúdo principal-->
 				<nav> <!-- nav = TAG semântica --> 
 					<h1>João da Silva</h1>
