iniciando o desafio portifolio

--- a/pag_sobreMim/bio.html
+++ b/pag_sobreMim/bio.html
@@ -55,9 +55,9 @@
 					<h1>João da Silva</h1>
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Portifólio</a></li>
+						<li><a href="portifolio.html">Portifólio</a></li>
 						<li><a href="#">sobre mim</a></li>
-						<li><a href="#">blog</a></li>
+						<li><a href="blog.html">blog</a></li>
 						<li><a href="#">contato</a></li>
 					</ul>
 				</nav>
